Development since March
Including the Google Colab training notebook and Flask application

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,26 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Flask website
+application/.elasticbeanstalk/*
+!application/.elasticbeanstalk/*.cfg.yml
+!application/.elasticbeanstalk/*.global.yml
+application/.gitignore
+application/virt
+application/Build_intro.py
+application/main.py
+application/upload
+application/templates/about2.html
+application/static/*.h5
+application/static/*.pkl
+
+# nabirds dataset
+nabirds
+
+# big src files
+src/Bird_description*
+src/web_images
+# img files
+bird_img*
+
