--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,6 @@ application/templates/about2.html
 application/static/*.h5
 application/static/*.pkl
 
-
 # nabirds dataset
 nabirds
 
@@ -154,3 +153,7 @@ src/Get_feeder_birds_per_state_per_month.py
 src/Species_per_checklist_by_week_state_county.csv
 src/Species_per_checklist_by_week_state_county_dup.csv
 *.DS_Store
+.*
+!.gitignore
+src/Plot_training_progress.py
+src/Bird_feeder_description_Manual_Cornell.csv
